fix: trying to get the credits displayed on safari

--- a/src/styles.css
+++ b/src/styles.css
@@ -164,6 +164,8 @@ p {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	max-height: 100%;
+    max-width: 100%;
 	margin: 0;
 	top: 0;
 	left: 0;
@@ -179,6 +181,8 @@ p {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	max-height: 100%;
+    max-width: 100%;
 	display: none;
 }
 .slide.active {
